Legend:
 + added
 - fixed
 * changed


6.31.2510
+ improve colors/theme settings: added btn "choose color", hide "sys colors"
+ color-dialogs keep user items for a)options dlg, b)lexer props dlg
+ lexer props dlg: hide crappy styles ops "hidden","read-only"; hide "sys colors"

6.31.2500
* removed commands, they live in plugin Sort: remove dup lines, remove dups+origins, remove adjacent dups, extract dups, extract uniques, remove blank lines, reverse lines, shuffle lines
- fix: autocomplete list closed by '-' chr
- fix: lex HTML, for updated Twig lexer

6.30.2490
+ (Totalcmd plugin) added option QuitOnUnknownFiles; see Readme\HiddenOptionsForLister.txt
* (Totalcmd plugin) renamed option TxOnly to TextOnly
+ lex HTML: hilite entities &nnnn;, hilite incorrect tag props; hilite colors #nnn
* lex Pascal: dont hilite "interface bkgnd"
- fix: lex Markdown

6.29.2470
+ option "Cut line if no selection" (was "Copy/Cut line...", now 2 opts)
* delete option "Preserve selection" (caused problems with plugins, they want caret at selection)
* lex Pascal: drop hilites of "types", "implementation backgnd"
* api

6.28.2450
+ api (for search-marks)
- fix: installer of lexer forgot to copy .cuda-lexmap
- fix: manifest file for high-dpi

6.28.2440
* change: deleted stuff "Select/Hilite - Auto-hilites", use plugin Hilite now (Synw code has 5 opts, plugin has 10 opts, via config file)
+ lex Pascal: keywords "types", "msgs"

6.27.2430
* change: added plugin New File; used on clickin arrow near "New file" tool button, instead of old menu (plugin is easier to edit)
* change: no menu, only item "File - New file" (cmd "New window" still exists in command list)
+ api

6.26.2420
* change: removed built-in commands for commenting; preinstalled plugin Comments (with even more commands, and Config dialog)
* change: removed built-in Sort cmds: plugin Sort does better job (more opts)
+ improved lexers: C#, Bash, reST
+ updated SynFTP (thanks tbeu)
+ api (for lexer props)
* some api deprecated
